--- a/pages/experiencias.html
+++ b/pages/experiencias.html
@@ -2,24 +2,24 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/main.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
-    <meta name="description" content="¿Querés saber lo que opinan los demás viajeros sobre Glaciar.AR? En nuestra página de opiniones vas a encontrar los comentarios y las valoraciones de nuestra gente sobre nuestras excursiones y servicios".>
-    <meta name="keywords" content="Patagonia, Glaciares, Turismo, Naturaleza, Tours, Aventura, Trekking, Expediciones, Excursiones, Viajes, Argentina, Sudamérica, Actividades al aire libre, Ecoturismo">
-  
-    <title>Experiencias de pasajeros que confiaron en GLACIAR.AR || Agencia de Viajes en Patagonia </title>
-    <link rel="shortcut icon" href="../img/logo.jpg" type="image/x-icon">
-
-  
-  
-  </head>
+    <header>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="../css/main.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
+        <meta name="description"
+            content="¿Querés saber lo que opinan los demás viajeros sobre Glaciar.AR? En nuestra página de opiniones vas a encontrar los comentarios y las valoraciones de nuestra gente sobre nuestras excursiones y servicios"
+            .>
+        <meta name="keywords"
+            content="Patagonia, Glaciares, Turismo, Naturaleza, Tours, Aventura, Trekking, Expediciones, Excursiones, Viajes, Argentina, Sudamérica, Actividades al aire libre, Ecoturismo">
+        <title>Experiencias de pasajeros que confiaron en GLACIAR.AR || Agencia de Viajes en Patagonia </title>
+        <link rel="shortcut icon" href="../img/logo.jpg" type="image/x-icon">
+</head>
 
 <body>
     <!-- menu de navegación -->
@@ -51,63 +51,59 @@
             </ul>
         </div>
     </nav>
+    <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="../index.html">Inicio</a></li>
+            <li class="breadcrumb-item active" aria-current="page">Experiencias</li>
+        </ol>
+    </nav>
+    </header>
+    <main>
+<!-- opiniones de glciar.ar  -->
+  <h1>Algunas opiniones de nuestros pasajeros!</h1>
 
-    <!-- fin menu navegación -->
-    <!-- comienzo formulario -->
-    <h1>Contactese con nosotros</h1>
+  <div class="opinion">
+    <h2>Una empresa seria!</h2>
+    <img src="../img/opiniones/default-avatar-2020-43.jpeg" alt="opinion">
+    <p class="rating">Calificación: 5/5</p>
+    <span class="estrella">&#9733;</span>
+    <span class="estrella">&#9733;</span>
+    <span class="estrella">&#9733;</span>
+    <span class="estrella">&#9733;</span>
+    <span class="estrella">&#9733;</span>
+    <p>Se nota que son una empresa seria con muy buen trato! </p>
+    <p class="autor">Por Yazmin Gonzáles</p>
+  </div>
 
-    <div class="contacto">
-        <div class="boton">
-            <a href="https://wa.me/2966658946" target="_blank">Whatsapp</a>
-        </div>
-        <div class="boton">
-
-            <a href="https://www.instagram.com" target="_blank">Instagram</a>
-        </div>
-        <div class="boton">
-
-            <a href="https://www.tripadvisor.com.ar/" target="_blank">TripAdvisor</a>
-        </div>
-
-    </div>
-    <div class="">
-
-        <form>
-            <div class="contacto-form">
-                <label for="name">Nombre:</label>
-                <input type="text" id="name" name="name">
-            </div>
-            <div class="contacto-form">
-                <label for="name">Apellido:</label>
-                <input type="text" id="name" name="name">
-            </div>
-            <div class="contacto-form">
-                <label for="pais">Pais:</label>
-                <select>
-                    <option value="ar">Argentina</option>
-                    <option value="br">Brasil</option>
-                    <option value="cl">Chile</option>
-                    <option value="pe">Perú</option>
-                    <option value="me">México</option>
-                    <option value="co">Colombia</option>
-                    <option value="ve">Venezuela</option>
-                </select>
-            </div>
-            <div class="contacto-form">
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email">
-            </div>
-            <div class="contacto-form">
-                <label for="message">Mensaje:</label>
-                <textarea id="message" name="message"></textarea>
-            </div>
-            <button type="submit">Enviar</button>
-        </form>
-
-    </div>
+  <div class="opinion">
+    <h2>Puntuales y profesionales! </h2>
+    <img src="../img/opiniones/ana-cristina-p.jpeg" alt="opinion">
+    <p class="rating">Calificación: 5/5</p>
+     <span class="estrella">&#9733;</span>
+      <span class="estrella">&#9733;</span>
+      <span class="estrella">&#9733;</span>
+      <span class="estrella">&#9733;</span>
+      <span class="estrella">&#9733;</span>
+    <p>Muy puntuales y profesionales, todo el staff. Los felicitamos! </p>
+    <p class="autor">Por Cristina Perez</p>
+  </div>
 
 
-    <!--fin formulario-->
+  <div class="opinion">
+    <h2>Los guías unos genios! </h2>
+    <img src="../img/opiniones/linadl.jpeg" alt="Producto B">
+    <p class="rating">Calificación: 4/5</p>
+     <span class="estrella">&#9733;</span>
+      <span class="estrella">&#9733;</span>
+      <span class="estrella">&#9733;</span>
+      <span class="estrella">&#9733;</span>
+      <span class="estrella">&#9734;</span>
+    <p>La pasamos muy bien con los guias y choferes de la empresa, muy amables y atentos! </p>
+    <p class="autor">Por María Gómez</p>
+  </div>
+
+<!-- Cierre resenias -->
+    </main>
     <footer>
         <div class="FooterContainer">
             <p>Descubre la Patagonia con glaciar.ar. Todos los derechos reservados. Para más información haga click <a
