--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -11,44 +11,52 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
-    <meta name="description" content="Conoce al equipo detrás de Glaciar.ar, una agencia de turismo en la Patagonia comprometida con ofrecer tours de alta calidad y en contacto con la naturaleza. Descubre nuestra pasión por la Patagonia y nuestro compromiso con el turismo sostenible.">
-    <meta name="keywords" content="Guias, trekking, Patagonia, Glaciares, Turismo, Naturaleza, Tours, Aventura, Expediciones, Excursiones, Viajes, Argentina, Sudamérica, Actividades al aire libre, Ecoturismo">
-  
+    <meta name="description"
+        content="Conoce al equipo detrás de Glaciar.ar, una agencia de turismo en la Patagonia comprometida con ofrecer tours de alta calidad y en contacto con la naturaleza. Descubre nuestra pasión por la Patagonia y nuestro compromiso con el turismo sostenible.">
+    <meta name="keywords"
+        content="Guias, trekking, Patagonia, Glaciares, Turismo, Naturaleza, Tours, Aventura, Expediciones, Excursiones, Viajes, Argentina, Sudamérica, Actividades al aire libre, Ecoturismo">
     <title>Nuestra pasión por la Patagonia || Glaciar.ar agencia de Viajes en Patagonia </title>
     <link rel="shortcut icon" href="../img/logo.jpg" type="image/x-icon">
-  </head>
+</head>
 
 <body>
-    <!-- menu de navegación -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light animate__animated animate__bounce">
-        <a class="navbar-brand" href="index.html"></a>
-        <div class="LogoGlaciar"> <img src="../img/logo.jpg" alt="Logo"></div>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+    <header>
+        <!-- menu de navegación -->
+        <nav class="navbar navbar-expand-lg navbar-light bg-light animate__animated animate__bounce">
+            <a class="navbar-brand" href="index.html"></a>
+            <div class="LogoGlaciar"> <img src="../img/logo.jpg" alt="Logo"></div>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="../index.html">Inicio</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="excursiones.html">Excursiones</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="nosotros.html">Nosotros</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="contacto.html">Contacto</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="experiencias.html">Experiencias</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="../index.html">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="excursiones.html">Excursiones</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="nosotros.html">Nosotros</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contacto.html">Contacto</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="experiencias.html">Experiencias</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+        <nav aria-label="breadcrumb">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="../index.html">Inicio</a></li>
+                <li class="breadcrumb-item active" aria-current="page">Nosotros</li>
+            </ol>
+        </nav>
+    </header>
     <!-- fin menu navegación -->
     <!-- comienzo nosotros -->
     <main>
