--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,15 +10,10 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
-  <meta name="description"
-    content="Descubri los increíbles paisajes de la Patagonia con Glaciar.ar. Ofrecemos tours guiados para que vivas una experiencia única en contacto con la naturaleza.">
-
+  <meta name="description" content="Descubri los increíbles paisajes de la Patagonia con Glaciar.ar. Ofrecemos tours guiados para que vivas una experiencia única en contacto con la naturaleza.">
   <title>GLACIAR.AR || Agencia de Viajes en Patagonia </title>
   <link rel="shortcut icon" href="./img/logo.jpg" type="image/x-icon">
-
-
 </head>
-
 <body>
   <header>
     <!-- menu de navegación -->
@@ -51,6 +45,12 @@
           </li>
         </ul>
       </div>
+    </nav>
+
+    <nav aria-label="breadcrumb">
+      <ol class="breadcrumb">
+        <li class="breadcrumb-item active" aria-current="page">Inicio</li>
+      </ol>
     </nav>
   </header>
   <main>
@@ -148,6 +148,4 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
-
-
 </html>
