--- a/pages/excursiones.html
+++ b/pages/excursiones.html
@@ -11,15 +11,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
-    <meta name="description"
-        content="Descubre la Patagonia con nuestros guías locales. En Glaciar.AR te ofrecemos una amplia selección de excursiones para que vivas experiencias únicas en contacto con la naturaleza.">
-    <meta name="keywords"
-        content="Patagonia, Glaciares, Turismo, Naturaleza, Tours, Aventura, Trekking, Expediciones, Excursiones, Viajes, Argentina, Sudamérica, Actividades al aire libre, Ecoturismo">
+    <meta name="description" content="Descubre la Patagonia con nuestros guías locales. En Glaciar.AR te ofrecemos una amplia selección de excursiones para que vivas experiencias únicas en contacto con la naturaleza.">
+    <meta name="keywords" content="Patagonia, Glaciares, Turismo, Naturaleza, Tours, Aventura, Trekking, Expediciones, Excursiones, Viajes, Argentina, Sudamérica, Actividades al aire libre, Ecoturismo">
     <title>Las mejores exursiones en GLACIAR.AR || Agencia de Viajes en Patagonia </title>
     <link rel="shortcut icon" href="../img/logo.jpg" type="image/x-icon">
-
-</head>
-
 </head>
 
 <body>
@@ -51,7 +46,13 @@
                     </li>
                 </ul>
             </div>
-        </nav>
+        </nav>         
+         <nav aria-label="breadcrumb">
+            <ol class="breadcrumb">
+              <li class="breadcrumb-item"><a href="../index.html">Inicio</a></li>
+              <li class="breadcrumb-item active" aria-current="page">Excursiones</li>
+            </ol>
+          </nav>
     </header>
     <main>
         <div class="copete">
@@ -191,11 +192,8 @@
                             </div>
                         </div>
                     </div>
-
-
     </main>
     <!--fin Tarjetas-->
-
     <footer>
         <div class="FooterContainer">
             <p>Descubre la Patagonia con glaciar.ar. Todos los derechos reservados. Para más información haga click <a
@@ -208,6 +206,4 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
-
-
 </html>
